Fixed a few issues

--- a/footer/bootstrap-sticky-footer/bootstrap-sticky-footer.html
+++ b/footer/bootstrap-sticky-footer/bootstrap-sticky-footer.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <title>Sticky Footer - Bootstrap</title>
+    <title>Bootstrap Sticky Footer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=viewport-width initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bootstrap-sticky-footer.css">
