--- a/button/nav-buttons/nav-buttons.html
+++ b/button/nav-buttons/nav-buttons.html
@@ -2,7 +2,7 @@
 <html>
   
   <head>
-    <title>Flat Buttons</title>
+    <title>Nav Buttons</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=viewport-width initial-scale=1">
     <link rel="stylesheet" type="text/css" href="nav-buttons.css">
